syntax = "proto3";

service LoaderService {
  rpc CreateFileSyncJob (CreateFileSyncJobRequest) returns (CreateFileSyncJobResponse) {}
  rpc CreateMetadataJob (CreateMetadataJobRequest) returns (CreateMetadataJobResponse) {}
  rpc CreateEpubJob (CreateEpubJobRequest) returns (CreateEpubJobResponse) {}
  rpc CreateCoverJob (CreateCoverJobRequest) returns (CreateCoverJobResponse) {}
}

enum MetadataType {
  ONIX_TWO_SHORT = 0;
  ONIX_TWO_LONG = 1;
  ONIX_THREE_SHORT = 2;
  ONIX_THREE_LONG = 3;
  UNKNOWN = 4;
}

message CreateFileSyncJobRequest {
  string id = 1;
  string accountName = 2;
  string manifestKey = 3;
}

message CreateFileSyncJobResponse {
  bool queued = 1;
}

message CreateMetadataJobRequest {
  string s3Key = 1;
  MetadataType metadataType = 2;
  bytes metadataFile = 3;
}

message CreateMetadataJobResponse {
  bool queued = 1;
}

message CreateEpubJobRequest {
  string s3Key = 1;
  bytes epubFile = 2;
}

message CreateEpubJobResponse {
  bool queued = 1;
}

message CreateCoverJobRequest {
  string s3Key = 1;
  bytes coverFile = 2;
}

message CreateCoverJobResponse {
  bool queued = 1;
}